Run `make generate`.
Signed-off-by: Cem Mergenci <cmergenci@gmail.com>

--- a/package/crds/compute.gcp.upbound.io_disks.yaml
+++ b/package/crds/compute.gcp.upbound.io_disks.yaml
@@ -74,6 +74,11 @@ spec:
                 type: string
               forProvider:
                 properties:
+                  accessMode:
+                    description: |-
+                      The accessMode of the disk.
+                      For example:
+                    type: string
                   asyncPrimaryDisk:
                     description: |-
                       A nested object resource
@@ -412,6 +417,11 @@ spec:
                   for example because of an external controller is managing them, like an
                   autoscaler.
                 properties:
+                  accessMode:
+                    description: |-
+                      The accessMode of the disk.
+                      For example:
+                    type: string
                   asyncPrimaryDisk:
                     description: |-
                       A nested object resource
@@ -904,6 +914,11 @@ spec:
             properties:
               atProvider:
                 properties:
+                  accessMode:
+                    description: |-
+                      The accessMode of the disk.
+                      For example:
+                    type: string
                   asyncPrimaryDisk:
                     description: |-
                       A nested object resource
