--- a/package/crds/compute.gcp.upbound.io_healthchecks.yaml
+++ b/package/crds/compute.gcp.upbound.io_healthchecks.yaml
@@ -276,6 +276,17 @@ spec:
                       The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
                     type: string
+                  sourceRegions:
+                    description: |-
+                      The list of cloud regions from which health checks are performed. If
+                      any regions are specified, then exactly 3 regions should be specified.
+                      The region names must be valid names of Google Cloud regions. This can
+                      only be set for global health check. If this list is non-empty, then
+                      there are restrictions on what other health check fields are supported
+                      and what other resources can use this health check:
+                    items:
+                      type: string
+                    type: array
                   sslHealthCheck:
                     description: |-
                       A nested object resource
@@ -590,6 +601,17 @@ spec:
                       The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
                     type: string
+                  sourceRegions:
+                    description: |-
+                      The list of cloud regions from which health checks are performed. If
+                      any regions are specified, then exactly 3 regions should be specified.
+                      The region names must be valid names of Google Cloud regions. This can
+                      only be set for global health check. If this list is non-empty, then
+                      there are restrictions on what other health check fields are supported
+                      and what other resources can use this health check:
+                    items:
+                      type: string
+                    type: array
                   sslHealthCheck:
                     description: |-
                       A nested object resource
@@ -1072,6 +1094,17 @@ spec:
                   selfLink:
                     description: The URI of the created resource.
                     type: string
+                  sourceRegions:
+                    description: |-
+                      The list of cloud regions from which health checks are performed. If
+                      any regions are specified, then exactly 3 regions should be specified.
+                      The region names must be valid names of Google Cloud regions. This can
+                      only be set for global health check. If this list is non-empty, then
+                      there are restrictions on what other health check fields are supported
+                      and what other resources can use this health check:
+                    items:
+                      type: string
+                    type: array
                   sslHealthCheck:
                     description: |-
                       A nested object resource
