--- a/package/crds/compute.gcp.upbound.io_subnetworks.yaml
+++ b/package/crds/compute.gcp.upbound.io_subnetworks.yaml
@@ -293,6 +293,15 @@ spec:
                           type: string
                       type: object
                     type: array
+                  sendSecondaryIpRangeIfEmpty:
+                    description: |-
+                      Controls the removal behavior of secondary_ip_range.
+                      When false, removing secondary_ip_range from config will not produce a diff as
+                      the provider will default to the API's value.
+                      When true, the provider will treat removing secondary_ip_range as sending an
+                      empty list of secondary IP ranges to the API.
+                      Defaults to false.
+                    type: boolean
                   stackType:
                     description: |-
                       The stack type for this subnet to identify whether the IPv6 feature is enabled or not.
@@ -531,6 +540,15 @@ spec:
                           type: string
                       type: object
                     type: array
+                  sendSecondaryIpRangeIfEmpty:
+                    description: |-
+                      Controls the removal behavior of secondary_ip_range.
+                      When false, removing secondary_ip_range from config will not produce a diff as
+                      the provider will default to the API's value.
+                      When true, the provider will treat removing secondary_ip_range as sending an
+                      empty list of secondary IP ranges to the API.
+                      Defaults to false.
+                    type: boolean
                   stackType:
                     description: |-
                       The stack type for this subnet to identify whether the IPv6 feature is enabled or not.
@@ -884,6 +902,15 @@ spec:
                   selfLink:
                     description: The URI of the created resource.
                     type: string
+                  sendSecondaryIpRangeIfEmpty:
+                    description: |-
+                      Controls the removal behavior of secondary_ip_range.
+                      When false, removing secondary_ip_range from config will not produce a diff as
+                      the provider will default to the API's value.
+                      When true, the provider will treat removing secondary_ip_range as sending an
+                      empty list of secondary IP ranges to the API.
+                      Defaults to false.
+                    type: boolean
                   stackType:
                     description: |-
                       The stack type for this subnet to identify whether the IPv6 feature is enabled or not.
