--- a/package/crds/cloudrun.gcp.upbound.io_v2services.yaml
+++ b/package/crds/cloudrun.gcp.upbound.io_v2services.yaml
@@ -95,6 +95,10 @@ spec:
                             this justification. If useDefault is False, then it must
                             be empty. For more information on breakglass, see https://cloud.google.com/binary-authorization/docs/using-breakglass
                           type: string
+                        policy:
+                          description: 'The path to a binary authorization policy.
+                            Format: projects/{project}/platforms/cloudRun/{policy-name}'
+                          type: string
                         useDefault:
                           description: If True, indicates to use the default project's
                             binary authorization policy. If False, binary authorization
@@ -1119,6 +1123,10 @@ spec:
                           description: If present, indicates to use Breakglass using
                             this justification. If useDefault is False, then it must
                             be empty. For more information on breakglass, see https://cloud.google.com/binary-authorization/docs/using-breakglass
+                          type: string
+                        policy:
+                          description: 'The path to a binary authorization policy.
+                            Format: projects/{project}/platforms/cloudRun/{policy-name}'
                           type: string
                         useDefault:
                           description: If True, indicates to use the default project's
@@ -2303,6 +2311,10 @@ spec:
                           description: If present, indicates to use Breakglass using
                             this justification. If useDefault is False, then it must
                             be empty. For more information on breakglass, see https://cloud.google.com/binary-authorization/docs/using-breakglass
+                          type: string
+                        policy:
+                          description: 'The path to a binary authorization policy.
+                            Format: projects/{project}/platforms/cloudRun/{policy-name}'
                           type: string
                         useDefault:
                           description: If True, indicates to use the default project's
