--- a/package/crds/container.gcp.upbound.io_nodepools.yaml
+++ b/package/crds/container.gcp.upbound.io_nodepools.yaml
@@ -230,6 +230,46 @@ spec:
                       documented below
                     items:
                       properties:
+                        additionalNodeNetworkConfigs:
+                          description: |-
+                            We specify the additional node networks for this node pool using this list. Each node network corresponds to an additional interface.
+                            Structure is documented below
+                          items:
+                            properties:
+                              network:
+                                description: Name of the VPC where the additional
+                                  interface belongs.
+                                type: string
+                              subnetwork:
+                                description: Name of the subnetwork where the additional
+                                  pod network belongs.
+                                type: string
+                            type: object
+                          type: array
+                        additionalPodNetworkConfigs:
+                          description: |-
+                            We specify the additional pod networks for this node pool using this list. Each pod network corresponds to an additional alias IP range for the node.
+                            Structure is documented below
+                          items:
+                            properties:
+                              maxPodsPerNode:
+                                description: |-
+                                  The maximum number of pods per node in this node pool.
+                                  Note that this does not work on node pools which are "route-based" - that is, node
+                                  pools belonging to clusters that do not have IP Aliasing enabled.
+                                  See the official documentation
+                                  for more information.
+                                type: number
+                              secondaryPodRange:
+                                description: The name of the secondary range on the
+                                  subnet which provides IP address for this pod range.
+                                type: string
+                              subnetwork:
+                                description: Name of the subnetwork where the additional
+                                  pod network belongs.
+                                type: string
+                            type: object
+                          type: array
                         createPodRange:
                           description: Whether to create a new range for pod IPs in
                             this node pool. Defaults are provided for pod_range and
@@ -423,6 +463,8 @@ spec:
                               cpuCfsQuotaPeriod:
                                 type: string
                               cpuManagerPolicy:
+                                type: string
+                              insecureKubeletReadonlyPortEnabled:
                                 type: string
                               podPidsLimit:
                                 type: number
@@ -850,6 +892,46 @@ spec:
                       documented below
                     items:
                       properties:
+                        additionalNodeNetworkConfigs:
+                          description: |-
+                            We specify the additional node networks for this node pool using this list. Each node network corresponds to an additional interface.
+                            Structure is documented below
+                          items:
+                            properties:
+                              network:
+                                description: Name of the VPC where the additional
+                                  interface belongs.
+                                type: string
+                              subnetwork:
+                                description: Name of the subnetwork where the additional
+                                  pod network belongs.
+                                type: string
+                            type: object
+                          type: array
+                        additionalPodNetworkConfigs:
+                          description: |-
+                            We specify the additional pod networks for this node pool using this list. Each pod network corresponds to an additional alias IP range for the node.
+                            Structure is documented below
+                          items:
+                            properties:
+                              maxPodsPerNode:
+                                description: |-
+                                  The maximum number of pods per node in this node pool.
+                                  Note that this does not work on node pools which are "route-based" - that is, node
+                                  pools belonging to clusters that do not have IP Aliasing enabled.
+                                  See the official documentation
+                                  for more information.
+                                type: number
+                              secondaryPodRange:
+                                description: The name of the secondary range on the
+                                  subnet which provides IP address for this pod range.
+                                type: string
+                              subnetwork:
+                                description: Name of the subnetwork where the additional
+                                  pod network belongs.
+                                type: string
+                            type: object
+                          type: array
                         createPodRange:
                           description: Whether to create a new range for pod IPs in
                             this node pool. Defaults are provided for pod_range and
@@ -1043,6 +1125,8 @@ spec:
                               cpuCfsQuotaPeriod:
                                 type: string
                               cpuManagerPolicy:
+                                type: string
+                              insecureKubeletReadonlyPortEnabled:
                                 type: string
                               podPidsLimit:
                                 type: number
@@ -1653,6 +1737,46 @@ spec:
                       documented below
                     items:
                       properties:
+                        additionalNodeNetworkConfigs:
+                          description: |-
+                            We specify the additional node networks for this node pool using this list. Each node network corresponds to an additional interface.
+                            Structure is documented below
+                          items:
+                            properties:
+                              network:
+                                description: Name of the VPC where the additional
+                                  interface belongs.
+                                type: string
+                              subnetwork:
+                                description: Name of the subnetwork where the additional
+                                  pod network belongs.
+                                type: string
+                            type: object
+                          type: array
+                        additionalPodNetworkConfigs:
+                          description: |-
+                            We specify the additional pod networks for this node pool using this list. Each pod network corresponds to an additional alias IP range for the node.
+                            Structure is documented below
+                          items:
+                            properties:
+                              maxPodsPerNode:
+                                description: |-
+                                  The maximum number of pods per node in this node pool.
+                                  Note that this does not work on node pools which are "route-based" - that is, node
+                                  pools belonging to clusters that do not have IP Aliasing enabled.
+                                  See the official documentation
+                                  for more information.
+                                type: number
+                              secondaryPodRange:
+                                description: The name of the secondary range on the
+                                  subnet which provides IP address for this pod range.
+                                type: string
+                              subnetwork:
+                                description: Name of the subnetwork where the additional
+                                  pod network belongs.
+                                type: string
+                            type: object
+                          type: array
                         createPodRange:
                           description: Whether to create a new range for pod IPs in
                             this node pool. Defaults are provided for pod_range and
@@ -1857,6 +1981,8 @@ spec:
                               cpuCfsQuotaPeriod:
                                 type: string
                               cpuManagerPolicy:
+                                type: string
+                              insecureKubeletReadonlyPortEnabled:
                                 type: string
                               podPidsLimit:
                                 type: number
