--- a/package/crds/sql.gcp.upbound.io_databaseinstances.yaml
+++ b/package/crds/sql.gcp.upbound.io_databaseinstances.yaml
@@ -442,6 +442,11 @@ spec:
                           description: The edition of the instance, can be ENTERPRISE
                             or ENTERPRISE_PLUS.
                           type: string
+                        enableDataplexIntegration:
+                          description: Enables Cloud SQL instance integration with
+                            Dataplex. MySQL, Postgres and SQL Server instances are
+                            supported for this feature. Defaults to false.
+                          type: boolean
                         enableGoogleMlIntegration:
                           description: Enables Cloud SQL instances to connect to Vertex
                             AI and pass requests for real-time predictions and insights.
@@ -629,6 +634,11 @@ spec:
                                   or not. To change this field, also set the corresponding
                                   value in ssl_mode.
                                 type: boolean
+                              serverCaMode:
+                                description: Specify how the server certificate's
+                                  Certificate Authority is hosted. Supported value
+                                  is GOOGLE_MANAGED_INTERNAL_CA.
+                                type: string
                               sslMode:
                                 description: Specify how SSL connection should be
                                   enforced in DB connections. This field provides
@@ -1130,6 +1140,11 @@ spec:
                           description: The edition of the instance, can be ENTERPRISE
                             or ENTERPRISE_PLUS.
                           type: string
+                        enableDataplexIntegration:
+                          description: Enables Cloud SQL instance integration with
+                            Dataplex. MySQL, Postgres and SQL Server instances are
+                            supported for this feature. Defaults to false.
+                          type: boolean
                         enableGoogleMlIntegration:
                           description: Enables Cloud SQL instances to connect to Vertex
                             AI and pass requests for real-time predictions and insights.
@@ -1317,6 +1332,11 @@ spec:
                                   or not. To change this field, also set the corresponding
                                   value in ssl_mode.
                                 type: boolean
+                              serverCaMode:
+                                description: Specify how the server certificate's
+                                  Certificate Authority is hosted. Supported value
+                                  is GOOGLE_MANAGED_INTERNAL_CA.
+                                type: string
                               sslMode:
                                 description: Specify how SSL connection should be
                                   enforced in DB connections. This field provides
@@ -2008,6 +2028,11 @@ spec:
                           description: The edition of the instance, can be ENTERPRISE
                             or ENTERPRISE_PLUS.
                           type: string
+                        enableDataplexIntegration:
+                          description: Enables Cloud SQL instance integration with
+                            Dataplex. MySQL, Postgres and SQL Server instances are
+                            supported for this feature. Defaults to false.
+                          type: boolean
                         enableGoogleMlIntegration:
                           description: Enables Cloud SQL instances to connect to Vertex
                             AI and pass requests for real-time predictions and insights.
@@ -2119,6 +2144,11 @@ spec:
                                   or not. To change this field, also set the corresponding
                                   value in ssl_mode.
                                 type: boolean
+                              serverCaMode:
+                                description: Specify how the server certificate's
+                                  Certificate Authority is hosted. Supported value
+                                  is GOOGLE_MANAGED_INTERNAL_CA.
+                                type: string
                               sslMode:
                                 description: Specify how SSL connection should be
                                   enforced in DB connections. This field provides
