Use datasource for project id in tags group
Signed-off-by: Fatih Türken <turkenf@gmail.com>

--- a/examples/tags/v1beta1/tagkey.yaml
+++ b/examples/tags/v1beta1/tagkey.yaml
@@ -3,12 +3,11 @@ kind: TagKey
 metadata:
   annotations:
     meta.upbound.io/example-id: tags/v1beta1/tagkey
-    upjet.upbound.io/manual-intervention: "The resource requires a real Project ID"
   labels:
     testing.upbound.io/example-name: key
   name: key
 spec:
   forProvider:
     description: For keyname resources.
-    parent: projects/&{project_id}
+    parent: projects/${data.cloudplatform_project.projectId}
     shortName: keyname
