--- a/examples/tags/v1beta1/tagvalue.yaml
+++ b/examples/tags/v1beta1/tagvalue.yaml
@@ -3,7 +3,6 @@ kind: TagValue
 metadata:
   annotations:
     meta.upbound.io/example-id: tags/v1beta1/tagvalue
-    upjet.upbound.io/manual-intervention: "This resource is skipped because the dependent resource is skipped"
   labels:
     testing.upbound.io/example-name: value
   name: value
@@ -22,12 +21,11 @@ kind: TagKey
 metadata:
   annotations:
     meta.upbound.io/example-id: tags/v1beta1/tagvalue
-    upjet.upbound.io/manual-intervention: "The resource requires a real Project ID"
   labels:
     testing.upbound.io/example-name: key
   name: key
 spec:
   forProvider:
     description: For keyname resources.
-    parent: projects/&{project_id}
+    parent: projects/${data.cloudplatform_project.projectId}
     shortName: keyname
