--- a/examples/tags/v1beta1/tagbinding.yaml
+++ b/examples/tags/v1beta1/tagbinding.yaml
@@ -3,13 +3,12 @@ kind: TagBinding
 metadata:
   annotations:
     meta.upbound.io/example-id: tags/v1beta1/tagbinding
-    upjet.upbound.io/manual-intervention: "The resource requires a real Project number"
   labels:
     testing.upbound.io/example-name: binding
   name: binding
 spec:
   forProvider:
-    parent: //cloudresourcemanager.googleapis.com/projects/&{project_number}
+    parent: //cloudresourcemanager.googleapis.com/projects/${data.cloudplatform_project.projectId}
     tagValueSelector:
       matchLabels:
         testing.upbound.io/example-name: value
@@ -21,14 +20,13 @@ kind: TagKey
 metadata:
   annotations:
     meta.upbound.io/example-id: tags/v1beta1/tagbinding
-    upjet.upbound.io/manual-intervention: "The resource requires a real Project ID"
   labels:
     testing.upbound.io/example-name: key
   name: key
 spec:
   forProvider:
     description: For keyname resources.
-    parent: projects/&{project_id}
+    parent: projects/${data.cloudplatform_project.projectId}
     shortName: keyname
 
 ---
@@ -38,7 +36,6 @@ kind: TagValue
 metadata:
   annotations:
     meta.upbound.io/example-id: tags/v1beta1/tagbinding
-    upjet.upbound.io/manual-intervention: "This resource is skipped because the TagBinding resource is skipped"
   labels:
     testing.upbound.io/example-name: value
   name: value
