--- a/examples/tags/v1beta1/tagkey-observe.yaml
+++ b/examples/tags/v1beta1/tagkey-observe.yaml
@@ -2,7 +2,7 @@ apiVersion: tags.gcp.upbound.io/v1beta1
 kind: TagKey
 metadata:
   annotations:
-    meta.upbound.io/example-id: tags/v1beta1/tagkey
+    meta.upbound.io/example-id: tags/v1beta1/tagkey-observe
     upjet.upbound.io/manual-intervention: "The resource requires a real external name"
     crossplane.io/external-name: "tagKeys/281475435132414"
   labels:
