--- a/examples/tags/v1beta1/tagvalue-observe.yaml
+++ b/examples/tags/v1beta1/tagvalue-observe.yaml
@@ -2,7 +2,7 @@ apiVersion: tags.gcp.upbound.io/v1beta1
 kind: TagValue
 metadata:
   annotations:
-    meta.upbound.io/example-id: tags/v1beta1/tagvalue
+    meta.upbound.io/example-id: tags/v1beta1/tagvalue-observe
     upjet.upbound.io/manual-intervention: "The resource requires a real external name"
     crossplane.io/external-name: "&{tagValueID}"
   labels:
