--- a/examples/dns/v1beta1/responsepolicy.yaml
+++ b/examples/dns/v1beta1/responsepolicy.yaml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2024 The Crossplane Authors <https://crossplane.io>
+#
+# SPDX-License-Identifier: Apache-2.0
+
 apiVersion: dns.gcp.upbound.io/v1beta1
 kind: ResponsePolicy
 metadata:
@@ -19,9 +23,7 @@ spec:
     - networkUrlSelector:
         matchLabels:
           testing.upbound.io/example-name: example2
-
 ---
-
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: Network
 metadata:
@@ -33,9 +35,7 @@ metadata:
 spec:
   forProvider:
     autoCreateSubnetworks: false
-
 ---
-
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: Network
 metadata:
@@ -47,9 +47,7 @@ metadata:
 spec:
   forProvider:
     autoCreateSubnetworks: false
-
 ---
-
 apiVersion: compute.gcp.upbound.io/v1beta1
 kind: Subnetwork
 metadata:
@@ -71,9 +69,7 @@ spec:
       rangeName: pod
     - ipCidrRange: 10.0.32.0/22
       rangeName: svc
-
 ---
-
 apiVersion: container.gcp.upbound.io/v1beta1
 kind: Cluster
 metadata:
@@ -87,7 +83,6 @@ spec:
     deletionProtection: false
     defaultSnatStatus:
     - disabled: true
-    deletionProtection: true
     initialNodeCount: 1
     ipAllocationPolicy:
     - clusterSecondaryRangeName: pod
