--- a/examples-generated/spanner/v1beta2/instance.yaml
+++ b/examples-generated/spanner/v1beta2/instance.yaml
@@ -9,6 +9,7 @@ metadata:
 spec:
   forProvider:
     config: regional-us-central1
+    defaultBackupScheduleType: AUTOMATIC
     displayName: Test Spanner Instance
     labels:
       foo: bar
