add dataplex provider configuration
Signed-off-by: nilan3 <nilanthanb1994@gmail.com>

--- a/examples-generated/dataplex/v1beta1/aspecttype.yaml
+++ b/examples-generated/dataplex/v1beta1/aspecttype.yaml
@@ -34,4 +34,6 @@ spec:
           }
         ]
       }
-    project: my-project-name
+    projectSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example
