--- a/examples/bigquery/v1beta1/datapolicydatapolicy.yaml
+++ b/examples/bigquery/v1beta1/datapolicydatapolicy.yaml
@@ -5,7 +5,7 @@ metadata:
     meta.upbound.io/example-id: bigquery/v1beta1/datapolicydatapolicy
   labels:
     testing.upbound.io/example-name: data_policy
-  name: data-policy
+  name: basicdatapolicy
 spec:
   forProvider:
     dataPolicyType: COLUMN_LEVEL_SECURITY_POLICY
