--- a/package/crds/bigquery.gcp.upbound.io_datapolicydatapolicyiambindings.yaml
+++ b/package/crds/bigquery.gcp.upbound.io_datapolicydatapolicyiambindings.yaml
@@ -375,6 +375,10 @@ spec:
             - forProvider
             type: object
             x-kubernetes-validations:
+            - message: spec.forProvider.location is a required parameter
+              rule: '!(''*'' in self.managementPolicies || ''Create'' in self.managementPolicies
+                || ''Update'' in self.managementPolicies) || has(self.forProvider.location)
+                || (has(self.initProvider) && has(self.initProvider.location))'
             - message: spec.forProvider.members is a required parameter
               rule: '!(''*'' in self.managementPolicies || ''Create'' in self.managementPolicies
                 || ''Update'' in self.managementPolicies) || has(self.forProvider.members)
