Make the Tag Key's parent the project rather than the organization
Signed-off-by: akerone <3759202+akerone@users.noreply.github.com>

--- a/examples/tags/v1beta1/locationtagbinding.yaml
+++ b/examples/tags/v1beta1/locationtagbinding.yaml
@@ -45,7 +45,7 @@ metadata:
 spec:
   forProvider:
     description: For keyname resources.
-    parent: organizations/123456789
+    parent: projects/1234567890
     shortName: keyname
 
 ---
