--- a/examples-generated/tags/v1beta1/locationtagbinding.yaml
+++ b/examples-generated/tags/v1beta1/locationtagbinding.yaml
@@ -10,7 +10,9 @@ spec:
   forProvider:
     location: us-central1
     parent: //run.googleapis.com/projects/${data.google_project.project.number}/locations/${google_cloud_run_service.default.location}/services/${google_cloud_run_service.default.name}
-    tagValue: tagValues/${google_tags_tag_value.value.name}
+    tagValueSelector:
+      matchLabels:
+        testing.upbound.io/example-name: value
 
 ---
 
