--- a/examples-generated/dataplex/v1beta1/lakeiampolicy.yaml
+++ b/examples-generated/dataplex/v1beta1/lakeiampolicy.yaml
@@ -1,21 +1,4 @@
 apiVersion: dataplex.gcp.upbound.io/v1beta1
-kind: Lake
-metadata:
-  annotations:
-    meta.upbound.io/example-id: dataplex/v1beta1/lake
-  labels:
-    testing.upbound.io/example-name: primary
-  name: primary
-spec:
-  forProvider:
-    description: Lake for DCL
-    displayName: Lake for DCL
-    labels:
-      my-lake: exists
-    location: us-west1
-    project: my-project-name
----
-apiVersion: dataplex.gcp.upbound.io/v1beta1
 kind: LakeIAMPolicy
 metadata:
   annotations:
@@ -25,10 +8,13 @@ metadata:
   name: policy
 spec:
   forProvider:
-    lake: primary
+    lakeSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example
     locationSelector:
       matchLabels:
-        testing.upbound.io/example-name: primary
+        testing.upbound.io/example-name: example
     policyData: ${data.google_iam_policy.admin.policy_data}
-    project: my-project-name
-    location: us-west1
+    projectSelector:
+      matchLabels:
+        testing.upbound.io/example-name: example
